lambda functions doodles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,14 @@
         "new": "cpp",
         "numbers": "cpp",
         "stdexcept": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     }
 }
